--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <body>
 
 <h1>Quantitative Analysis and Prediction of the Outcomes of Influence Campaigns on Social Networks</h1>
+  
+  <p>Internet and social media are, nowadays, very popular among people and one of the primary sources for the consumption of news and updates. The spread of misinformation and fake news on social media is therefore a very significant problem, as it fuels wrong beliefs and misconceptions.</p>
 
-<p>This project is born from a collaboration between the University of Padova and the National Research Council of Pisa. The members of this project have several years of research in the fields of misinformation and persuasive social media campaigns.</p>
+  <p>The goal of this project is to analyse and build tools that will determine the influence of persuasion campaigns on social networks’ users. We will investigate how influence can be measured through posts and users’ interactions by adapting already existing algorithms or developing new ones. We hope to find a process that works well and to build the basis for a tool that can allow users to identify if some posts could be trying to influence their opinion during coordinated campaigns.</p>
 
-<p>The goal of this project is to analyse and build tools that will determine the influence of persuasion campaigns on social networks’ users. We will investigate how influence can be measured through posts and their interactions by adapting already existing algorithms. We hope to find a process that works well and to build the basis for a tool that can allow users to identify if some posts could be trying to influence their opinion during coordinated campaigns.</p>
-
+  <p>This project is born from a collaboration between the University of Padova and the National Research Council of Pisa. The members of this project have several years of research in the fields of misinformation and persuasive social media campaigns.</p>
+  
 </body>
 </html>
